--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
-
+	<link rel="preload" href="/fonts/ReallySansLarge-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/ReallySansSmall-Semibold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/ReallySansSmall-Regular.woff2" as="font" type="font/woff2" crossorigin>
 	<script defer src='/build/bundle.js'></script>
 </head>
 <body>
